实现消息交换

--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -2,6 +2,118 @@
 
 ## spring 
 
+### 1、什么是Spring
+
+​		Spring 是一个java企业级应用开发框架。Spring 框架主要用于 java 应用开发，它的有些拓展针对 J2EE 平台的 WEB 应用开发。Spring 目标是简化 java 企业级应用开发。
+
+​		Spring是一个开源的 java 企业级开发框架。它是一个轻量级的控制反转和面相切面的容器框架。它从大小和消耗两方面来看都是一个轻量级的。它通过控制反转和依赖注入 实现 bean与bean之间的低耦合。
+
+### 2、为什么使用 Spring
+
+​	Spring 有一下优点：
+
+1. Spring是轻量级的，基础版不超过10M
+2. 低耦合：通过控制反转实现低耦合
+3. 面相切面：通过面向切面编程将系统服务和业务服务分开
+4. MVC框架：Spring提供的一个web框架，是WEB框架一个很好的替代品
+5. 事务管理：Spring提供一个持续的事务管理接口，可以拓展到下至本地上至全局的的事务
+6. 异常处理：Spring提供API将具体的技术异常转换成一致的UNCHECKED 异常
+
+### 3、注解@Resource 与 @Autowired的区别
+
+相同点：它们都可以作用在 Setter 和字段上面，是依赖注入的注解。如果写在字段上面就可以不用写Setter方法了。
+
+不同点：前者默认通过名称装配对象，后者默认通过类型找对象；
+
+### 4、依赖注入有几种方式？
+
+三种方式
+
+1. Setter方法注入，Spring通过调用成员变量的Setter函数将被依赖对象注入给依赖类。它十分灵活，但是在没有
+2. 构造函数注入，初始化完成后就可以获得使用的对象。当需要注入的对象很多的时候，构造函数参数列表会很长，不够灵活。
+3. 接口注入：依赖类必须要实现指定的接口，然后实现该接口的一个函数，该函数用于依赖注入。入侵性太强，不建议使用。
+
+### 5、讲一讲什么是spring
+
+​	spring是一个轻量级IOC和AOP框架。是为java提供基础性服务的一套框架。目的是用于简化企业应用的开发，让开发只关心业务需求。常见的配置方式有三种：基于XML的配置、基于注解的配置、基于Java的配置。
+
+spring的重要模块有
+
+- springCORE:spring的核心，提供IOC服务
+- springContext：提供框架式的bean访问方式，以及企业级功能
+- springAop：面相切面编程服务
+- springDAO：对JDBC的抽象，简化数据库访问的异常
+- springORM：对现有的ORM框架的支持
+- springWEB：提供了基本的面相WEB的综合特性，例如多方文件传输。
+- springMVC：提供面向web的Controller-model-view的实现
+
+### 6、说说你对SpringMVC的理解
+
+MVC是一种设计模式，M--Model 模型，V--View 视图，C--Controller 控制器，SpringMVC是在Spring的基础上加上，提供了一个WEB应用的MVC 模块 ，SpringMVC就是Spring大模块下的一下小的子模块。
+
+
+
+### 7、springMVC的主要注解有哪些
+
+1. @Controller ： 标记一个类为SpringMVC的控制器
+2. @ResetController：标记一个类为SpringMVC的控制器，并且请求风格为Rest
+3. @RequestMapping：用于映射到控制器方法上的注解，也可以用于类上，用于类上表示所有的请求都会经过类注解的路径上
+4. @ResponseBody：注解实现Controller方法返回的对象转换为json对象响应给用户
+5. @RequestBody：接受http请求的json对象，json对象将转换成java对象
+6. @SessionAttribute：将一个对象存放到Session中
+
+### 8、谈谈你对SpringAOP的理解
+
+​		面相切面编程，能够将那些与业务无关，却为业务模块共同调用的逻辑或者责任(如日志处理、事务处理、权限控制等)封装起来，便于减少系统中的重复代码，降低耦合度，便于以后拓展和维护。
+
+​		SpringAOP 是基于动态代理的，如果需要代理的对象实现了某个接口，那么Spring就会使用 JDK 动态代理去创建一个代理对象；如果没有实现的接口，就会使用 CGlib 动态代理来生成一个代理对象。也可以用使用 AspectJ。SpringAOP也集成了AspectJ这个AOP框架。
+
+### 9、AspectJ 与SpringAOP有什么区别
+
+1. AspectJ 是编译时增强，SpringAop是运行时增强。
+2. SpringAOP是基于代理，AspectJ是基于字节码
+3. AspectJ更加强大更加完整，但是AOP更加简单。Spring已经集成AspectJ框架了。
+4. 如果我们的切面比较少两者差异不大，如果切面很多，最好使用 AspectJ。
+
+### 10、什么是通知，通知有那些类型
+
+​		就是AOP需要触发的代码，可以是在程序执行之前，也可是之后。
+
+​		常见的通知
+
+- 环绕通知
+- 前置通知
+- 后置通知
+- 异常通知
+
+### 11、SpringAOP的横切关注点和关注点的区别
+
+  关注点是使用SpringAOP通知的地方，横切关注点是使用SpringAOP通知(使用的功能)
+
+### 12、说说你对SpringIOC的理解
+
+​		SpringIOC就是控制反转。以前对创建对象的控制权和时机是由要使用的对象自己把控的，现在交由Spring的容器中去了。并由容器根据配置去控制对象的创建和各个对象之间的依赖的管理。这样就打成了对象域对象之间的低耦合
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 ### springBean的生命周期
 
 
