实现消息交换

--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -167,9 +167,34 @@ msyql数据库的主要引擎有：
 
 ​		mybatis 是一个半orm(对象关系映射)框架，它的内部封装了JDBC，开发者只需要关心 SQL本身，不需要处理加载、创建链接、创建statement等操作。开发编写原生sql，可以严格控制sql的执行性能，灵活度高；mybatis可以使用xml或者注释来配置和映射原生信息，将POJO映射成数据库记录，避免了几乎所有的JDBC代码和手动设置参数；通过XML文件或者注释的方法将要执行的各种statement配置起来，并通过java对象和statement中的sql的动态参数进行映射成最终需要执行的sql语句，最后由mybatis框架执行sql语句并将返回结果映射成java对象返回。
 
+### 2、说说mybatis的优缺点
 
+**优点**
 
+1. 基于sql编程，十分灵活；sql大都写在xml里面，与代码的耦合度低，便于维护；提供xml标签，支持动态sql，并可以重复使用。
+2. 与JDBC相比，减少了代码量，消除了JDBC中的冗余代码，不需要手动开关连接。
+3. 对各个数据库的兼容都很好
+4. 能够很好的集成到Spring中
+5. 提供映射标签，实现数据库字段与java对象的orm映射。提供对象关心映射标签，支持对象关系组件维护。
 
+**缺点**
+
+1. sql编写的工作量大
+2. sql语句依赖数据库，可移植性差
+
+###3、 #{} 与${}的区别
+
+1.  **#{}**是预处理，**${}**是字符串替换 
+2.  mybatis在处理的时候会将**#{}**替换为？，用 PreparedStatement 的set方法来赋值
+3. mybatis在处理 **${}** 时，会把 **${}** 直接替换变量的值
+4. 前者可以防止sql注入，提高系统安全性
+
+### 4、当实体类中的属性名与表中的字段名不一样，怎么办
+
+1. 在sql中取别名的方式
+2. 在xml中可以映射字段名和实体属性名称
+
+### 5、mybatis中是如何分页的，分页插件是什么原理
 
 
 
