面试思维导图复习

--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -161,6 +161,12 @@ msyql数据库的主要引擎有：
 
 持久性：一旦事务提交成功，事务的所有操作都必须提交到数据库中
 
+### 5、
+
+
+
+
+
 ##  三、mybatis
 
 ### 1、什么是mybatis
@@ -195,6 +201,67 @@ msyql数据库的主要引擎有：
 2. 在xml中可以映射字段名和实体属性名称
 
 ### 5、mybatis中是如何分页的，分页插件是什么原理
+
+​		mybatis使用的是rowbounds对象进行分页，它针对resultset结果集执行的内存分页，而非物理分页。可以在sql内直接拼接带有物理分页的参数来完成物理分页功能，也可以使用分页插件来完成五路分页，比如：mysql数据库的时候，在原有的sql后面拼写limit。
+
+​		分页插件的基本原理是hi用mybatis提供的插件接口，实现自定义插件，在插件的拦截方法呢拦截待执行的sql，然后重写sql，根据dialect方言，添加对应的物理分页语句和物理分页语句。
+
+### 6、mybatis 如何将sql执行后的结果封装为目标对象并返回，都有哪些映射形式？
+
+1. 使用标签对对象和数据库字段一一映射
+2. 使用sql中的别名进行映射，将列的别名与对象的属性进行映射
+
+有了映射关系后，mybatis 通过反射创建对象，并通过反射给对象的属性复制，并返回，那些找不到映射关系的属性是无法赋值的。
+
+### 7、如何实现批量插入
+
+1. 使用 forEach 标签生成insert语句
+2. java中使用循环循环中使用insert语句
+
+### 8、Mybatis中除了 insert|select|update|delete标签之外还有哪些标签？
+
+1. parameterType：用于指定输入参数的类型，可以是一个Java的全限定名称
+2. sql：用于定义sql片段
+3. foeach：foreach循环，用于处理集合类型的参数
+4. if/choose/when/otherwise:用于编写动态sql，根据条件判断生成不同的sql
+5. trim/where/set:用在动态sql语句中去除多余的空格和逗号
+6. include：用于引入sql片段
+7. resultType/resultMap：用于指定返回结果的类型，可以是一个Java的全限定名称，也可以是一个已经定义的resultMap。
+8. bind:用于将一个ONGI 表达式绑定到一个变量上，方便后续使用。
+9. set：用于在update语句中色湖之要更新的字段和值。
+
+### 9、mybatis是如何实现一对一的？
+
+1. 在resultMap中设置association节点配置一对一的类就可以完成
+2. 先查一张表，在使用外键在查询另一张表的数据，也是通过association配置，但是另外一个的查询通过select属性配置
+
+### 10、mybatis 是否支持延时加载？如果支持它实现的原理是什么？
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
