--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -161,7 +161,19 @@ msyql数据库的主要引擎有：
 
 持久性：一旦事务提交成功，事务的所有操作都必须提交到数据库中
 
-### 5、
+### 5、索引是什么
+
+1. 索引帮组数据库更高效的获取数据的数据结构。数据库的索引能加快数据库查询速度。
+2. 索引是存在存盘上的索引文件中的
+3. 索引包括聚集索引、覆盖索引、组合索引、前缀索引、唯一索引，没有特殊说明，默认都是使用 B+树 结构组织。
+
+### 6、mysql中常用的优化手段有
+
+1. 尽量少使用SELECT * 
+2. 尽量减少子查询，多使用关联查询 left join \right join \inner join 。
+3. or 的查询尽量使用 union 和union all代替(在确认没有重复数据或者不用剔除重复数据的时候，使用后面的更好)。
+4. 尽量在where 语句中少使用 <> 和 !=，这样会让引擎放弃索引，而进行全表扫描
+5. 尽量在where语句中少使用 null 进行判断
 
 
 
@@ -237,11 +249,33 @@ msyql数据库的主要引擎有：
 
 ### 10、mybatis 是否支持延时加载？如果支持它实现的原理是什么？
 
+1. Mybatis仅支持association 关联对象和collection关联集合对象的延迟加载，association 指的就是一对一，collection指的就是一对多的查询。在Mybatis配置文件中，可以配置是否启用延迟加载lazyLoadingEnabled=true|false。
+2. 它的原理是，使用CGLIB创建目标对象的代理对象，当调用目标方法时，进入拦截器方法，比如调用 a.get(B).getName()。拦截器invoke()方法发现a.getB()是null值，那么就会单独发送事先保存好的查询关联B对象的sql，把B查询上来，然后调用a.setB(b),于是a的对象b属性就有值了，接着完成a.getB().getName()方法的调用。这就是延迟加载的基本原理
+3. 几乎所有的包括 Hibernate ，支持延迟加载的原理都是一样的。
 
+### 11、说说Mybatis的缓存机制
 
+**一级缓存localCache**
 
+​		在一次会话过程中，我们可能多次查询条件完全相同的sql，MYBatis使用一级缓存的方案优化这部分场景，如果是相同的sql语句，会优先命中一级缓存，避免直接对数据库进行查询，提高性能。
 
+​		每一个sqlsession中持有了Executor，每一个Executor中有一个LocalCache。当用户发起查询的时候，Mybatis根据当前执行的雨具生成 MappedStatement，在LocalCache中查询，如果缓存命中的话，直接返回结果给用户，如果没有命中的话，查询数据库，结果写入LocalCache，最后返回结果给用户。具体实现类的类关系图如下图所示
 
+1. mysql的一级缓存生命周期与sqlSession一致
+2. mybatis中的一级缓存设计简单，只有一个hashmap，在缓存功能上有所缺陷
+3. Mybatis中的一级缓存在 SqlSession中，如果在多个SqlSession和分布式中会出现脏读的现象
+
+**二级缓存**
+
+​		在上文中提到的一级缓存中，其最大的共享范围就是在一个SqlSession的内部，如果多个sqlSession之间需要共享缓存，那么需要二级缓存。开启二级缓存后，会使用 CachingExecutor 装饰 Executor ，进入一级缓存的查询流程前，现在 CachingExecutor 进行二级缓存的查询。
+
+​		当二级缓存开启后，同一个namespace下所有的操作语句，都影响同一个Cache，即二级缓存被多个sqlsession共享，是一个全局的变量。
+
+二级缓存开启后，查询的执行流程：二级->一级->数据库
+
+1. Mybatis的二级缓存相对于一级缓存来说，实现了sqlSession之间的缓存数据的共享，同事粒度更加细，能够到namespace级别，通过Cache接口实现类不同的组合，对Cache的可控性也更强。
+2. Mybatis在多表查询的时候，极大可能会出现脏数据，有设计上的缺陷，安全使用二级缓存的条件比较苛刻。
+3. 在分布式的环境下，由于默认的mybatis Cache实现都是基于本地的，分布式环境下必然出现读到脏数据的情况，需要使用集中式缓存将myBatis的Cache接口实现，有一定的开发成本，直接使用Redis、Memcached等分布式缓存可能成本更低，安全性也更高。
 
 
 
