实现消息交换

--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -175,9 +175,33 @@ msyql数据库的主要引擎有：
 4. 尽量在where 语句中少使用 <> 和 !=，这样会让引擎放弃索引，而进行全表扫描
 5. 尽量在where语句中少使用 null 进行判断
 
+### 7、简单说一说drop、delete和truncate的区别
 
+1. 三个都是删除的意思
+2. delete与truncate 是删除表数据，不删除表结构，drop删除表结构
+3. 删除速度 drop》delete》truncate
+4. delete是dml语句，事务可以回滚，而其它两个不行
 
+### 8、什么是视图
 
+视图是一种虚拟表，具有和物理表相同的功能。可以对视图进行增、删、改、查操作，视图通产是一个表或者多个表的行或列的子集。对视图的修改不影响物理表。它使得我们获取数据更加容易，相比于多表查询	
+
+### 9、什么是内连接、外连接、左连接、右连接
+
+1. 内连接：匹配两张表中相关的数据
+2. 左外连接：除了两张表中先关的记录外，还会匹配左表中剩余的记录，右表中未匹配的字段使用 NULL 表示
+3. 右外链接：与左外链接相反
+
+### 10、并发事务带来了哪些问题
+
+1. 脏读
+2. 丢失修改
+3. 不可重复读
+4. 幻读
+
+**不可重复度和幻读的区别：**
+
+​		不可重复读的重点是修改比如多次读取一条记录发现其中某些列的值被修改，幻读的重点在于新增或者删除比如多次读取一条记录发现记录增多或者减少了。
 
 ##  三、mybatis
 
