实现消息交换

--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -301,15 +301,63 @@ msyql数据库的主要引擎有：
 2. Mybatis在多表查询的时候，极大可能会出现脏数据，有设计上的缺陷，安全使用二级缓存的条件比较苛刻。
 3. 在分布式的环境下，由于默认的mybatis Cache实现都是基于本地的，分布式环境下必然出现读到脏数据的情况，需要使用集中式缓存将myBatis的Cache接口实现，有一定的开发成本，直接使用Redis、Memcached等分布式缓存可能成本更低，安全性也更高。
 
+## 四、SpringBoot
+
+### 1、为什么使用SpringBoot
+
+1. 独立运行
+
+   ​	Springboot内置了tomcat和jetty等，现在不需要打包成war包，放到容器中，先在可以只需要打成一个可以执行jar包就可以了。
+
+2. 简化配置
+
+   ​	Spring-boot-starter启动器自动依赖其他组件，减少maven的配置，并且更好的控制依赖的包的版本
+
+3. 无代码生成
+
+   ​	Springboot配置过程中无代码生成，也无需XML配置文件就能完成所有配置工作，这一切都是借助条件注解完成的，这也是Spring4.x的核心功能之一。
+
+4. 自动配置
+
+   ​	Spring可以根据当前类路径下的类、jar包来配置bean，如添加一个Spring-boot-starter-web就能拥有一个web功能，无需其他配置
+
+5. 应用监控
+
+   ​	SpringBoot有各种监控服务，做健康监测
 
 
 
+### 2、springboot的核心注解有哪几个？它是由哪几个组成的
 
+​	启动类上面的注解是@SpringBootApplication，它也是springBoot的核心注解，主要包含了以下3个注解：
 
+​		@SpringBootConfiguration：组合了@Configuaration注解，实现配置文件的功能。
 
+​		@EnableAutoConfigutation ：打开自动配置的功能，也可以关闭某个自动配置的选项，如关闭数据源自动配置功能(Exclude={**.class})
 
+​		@ComponentScan:Spring组件扫描。
 
+### 3、运行SpringBoot的方式有哪几种
 
+1. 打包用命令或者放到容器中去
+2. maven和gradle的插件运行
+3. 直接执行main方法执行
+
+### 4、如何理解springboot中的starter
+
+​		Starter是什么：Starters可以理解为启动器，它包含了一系列可以继承到应用里面的依赖包，你可以一站式继承Spring以及其他技术，而不需要到处找示例代码和依赖包，如你想使用SpringJPA访问数据库，只需要加入依赖Spring-boot-starter-data-jpa启动器依赖就能使用了。Starter包含了许多项目中需要用到的依赖，它们能快速持续的运行，都是一系列得到支持管理传递性依赖
+
+### 5、如何在Spring Boot 启动的时候运行指定的代码
+
+​		如果你想在SpringBoot启动的时候运行一些特定的代码，你可以在实现接口ApplicationRunner或者CommandLineRunner，这连个接口实现方式一样，它们只提供了一个run的方法
+
+CommandLineRunner：启动获取命令行参数
+
+### 6、SpringBoot需要独立的容器运行吗？
+
+​		可以不需要，内置了 Tomcat/ Jetty 等容器。
+
+### 7、SpringBoot的监视器是什么
 
 
 
