实现消息交换

--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -359,6 +359,68 @@ CommandLineRunner：启动获取命令行参数
 
 ### 7、SpringBoot的监视器是什么
 
+​		Spring Boot Actuator 是Spring启动框架中的重要功能之一。Spring  boot 监视器可以帮组您访问生产环境中正在运行的应用程序的当前状态。有几个指标必须在生产环境中进行检查和控制。即使一些外部应用程序可能正在使用这些服务来向相关人员触发警报消息。监视器模块公开了一组可以直接作为 HTTP URL访问的REST 端点来检测。
+
+### 8、如何使用SpringBoot实现异常处理
+
+​		spring提供了一种使用ControllerAdvice 处理异常的非常又有的方法。我们通过实现一个ControllerAdvice类，来处理控制器类抛出的所有异常。
+
+###  9、Spring常用的Starter有那些
+
+- spring-boot-starter-web 嵌入tomcat和web开发需要servlet与jsp支持
+- spring-boot-starter-data-jpa 数据库支持
+- spring-boot-starter-data-redis redis数据库支持
+- spring-boot-starter-data-solr solr支持
+- mybatis-spring-boot-starter 第三方的mybatis集成starter
+
+### 10、SpringBoot 实现热部署有哪几种方式？
+
+- Spring Loaded
+- Spring-boot-devtools
+
+### 11、如何理解SpringBoot默认配置加载顺序
+
+- 内部加载顺序
+
+1. 文件夾
+   - 根目录下的config
+   - 根目录
+   - 根目录下Resource下的config
+   - 根目录下Resource目录
+2. 同一個文件夾下面的文件
+   - *.properties
+   - *.yml
+
+- 外部加载顺序
+  1. 使用命令行修改的配置参数
+  2. 来自java:comp/env的NDI属性
+  3. 操作系统环境变量
+  4. jar包，由jar包外向jar包内寻找，优先加载带Profile
+
+## 五、SpringCloud
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
