实现消息交换

--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -399,13 +399,33 @@ CommandLineRunner：启动获取命令行参数
 
 ## 五、SpringCloud
 
+### 1、什么是SpringCloud
 
+​		SpringCloud 是应用程序启动器是基于 Spring Boot 的Spring 继承应用程序，提供与外部系统的继承。Spring Cloud Task，一个生命周期断站的微服务框架，用于快速构建执行有限数据处理的应用程序。
 
+### 2、什么事微服务
 
+​		微服务是一种架构风格，它提倡将单一的应用划分为一组小服务，每一个服务在自己独立的进程中，各个服务之间相互配合、协调，为客户提供最终价值。服务之间采用轻量级的通讯机制沟通(通常是基于http的restfulAPI)，每一个业务都围绕具体的业务进行构建，并且能够独立的构建在生产环境中。尽量避免统一的集中式的服务管理机制。
 
+### 3、SpringCloud有什么优势
 
+1. 与分布式相关的复杂性
 
+### 4、什么是服务熔断？什么是服务降级
 
+​		熔断机制是应对雪崩效应的一种微服务链路保护机制。当某个服务响应时间过长，或者不可用的时候，会进行服务降级，进而熔断该节点的服务调用，快速的返回错误的响应信息。当检测到该服务节点正常的时候，恢复调用的链路。在SpringCloud的框架中，使用的 Hystrix实现，Hystrix会监控服务之间的调用状况。当失败到一定阈值，就会启动熔断机制。
+
+​		服务降级，一半是从整体负荷考虑。就是当某个服务熔断之后，服务器将不再被调用，此时客户端可以自己准备一个本地的 fallback毁掉，返回一个缺省值。这样做，虽然水平下降，但是好歹可以用，比直接挂掉强。
+
+### 5、Eureka和Zookeeper都可以提供服务注册发现的功能，清说一说两者的区别
+
+**ACP：**  A--高可用  C--一致性   P--分区容错性
+
+​		Eureka：实现的是 AP，高可用和分区容错性。当注册中心查询服务列表的时候。可以允许你返回的是几分钟之前的信息，单丝不允许直接down掉。也就是说对服务的可用性要求比较高。Eureka 保证可用性的方法是各个节点是平衡的，几个节点挂掉不会影响正常节点的工作。只要有一个节点正常，就还可以工作
+
+​		Zookeeper：实现的是 CP，一致性和分区容错性。zk会出现当一个服务挂掉后，剩下的服务会选取主节点，在选取的过程中zk的集群是不可用的。
+
+### 6、 SpringBoot 与SpringCloud的区别
 
 
 
