实现消息交换

--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -427,7 +427,19 @@ CommandLineRunner：启动获取命令行参数
 
 ### 6、 SpringBoot 与SpringCloud的区别
 
+​		SpringBoot专注于快速方便的开发单个个体的微服务。
 
+​		SpringCloud是关注全局的微服务协调整理治理框架，它将SpringBoot开发的一个个单体微服务整体合并管理起来。
+
+​		SpringCloud为各个服务之间提供，配置管理、服务发现、断路器、路由、微代理、事件总线、全局锁、决策竞选、分布式会话等等集成服务。
+
+​		SpringBoot可以离开SpringCloud独立使用开发项目，但是SpringCloud不可以离开SpringBoot，属于依赖关系
+
+​		SpringBoot专注于快速、方便的开发单个微服务个体，SpringCloud关注全局的服务治理框架
+
+### 7、负载平衡的意义是什么
+
+​		在计算中，负载均衡可以改善跨计算机，计算机集群，网络链接，中央处理单元或者磁盘驱动器等多种计算资源的工作负载分布。负载均衡旨在优化资源使用，最大化吞吐量，最小化响应时间并避免任何单一资源的过载。使用多个组件进行负载均衡而不是单个组件可能会通过冗余来提高可靠性和可用性。负载均衡通常涉及专用软件或者硬件，例如多层交换机或者域名系统服务器进程。
 
 
 
