实现消息交换

--- a/面试/面试题.md
+++ b/面试/面试题.md
@@ -441,6 +441,74 @@ CommandLineRunner：启动获取命令行参数
 
 ​		在计算中，负载均衡可以改善跨计算机，计算机集群，网络链接，中央处理单元或者磁盘驱动器等多种计算资源的工作负载分布。负载均衡旨在优化资源使用，最大化吞吐量，最小化响应时间并避免任何单一资源的过载。使用多个组件进行负载均衡而不是单个组件可能会通过冗余来提高可靠性和可用性。负载均衡通常涉及专用软件或者硬件，例如多层交换机或者域名系统服务器进程。
 
+###  8、什么是Hystrix
+
+​		Hystrix是一个延迟和容错库，旨在隔离远程系统，服务和第三方那个库的访问点，当出现故障是不可避免的故障时，停止级联故障并在复杂的分布式系统中实现弹性。
+
+​		通常对于使用微服务架构开发的系统，涉及到许多微服务。这些服务彼此协作。
+
+### 9、什么是Hystrix断路器，我们需要它吗？
+
+​		由于某些原因，公开服务会引发异常。在这种情况下使用 Hystrix我们定义了一个回退方法。如果在公开服务中发生异常，则回退方法返回一些默认值。
+
+### 10、说说RPC的实现原理
+
+​		首先需要有处理网络连接通讯的模块，负责连接建立、管理和消息的传输。其次需要有编码的模块，因为网络通讯都是传输的字节码，需要将我们使用的对象序列化和反序列化。剩下的就是客户端和服务端的部分，服务端暴露要开放的服务接口，客户调用服务接口的已给代理实现，这个代理实现负责收集数据、编码并传输给服务器然后等待结果返回。
+
+## 六、zookeeper
+
+### 1、说说zookeeper是什么？
+
+​		字面意思是动物管理员的 意思，体现 zookeeper 的特点是维护、协调和监控。
+
+​		有些软件你想做成集群或者分布式，你可以用 Zookeeper 帮你来辅助实现。
+
+**特点：**
+
+1. 最终一致性：客户端看到的数据最终是一致的。
+2. 可靠性：服务器保存了消息，那么它就一直都存在。
+3. Zookeeper不能保证两个客户端同事得到刚更新的数据。
+4. 独立性：不同客户端直接互不影响。
+5. 原子性：更新要不成功要不失败，没有第三个状态。
+
+###  2、Zookeeper有哪些应用场景？
+
+**数据发布与订阅**
+
+​		
+
+**命名服务**
+
+
+
+**配置管理**
+
+
+
+**集群管理**
+
+
+
+**分布式通知与协调**
+
+
+
+**分布式锁**
+
+
+
+**分布式队列**
+
+### 3、说说Zookeeper的工作原理
+
+
+
+
+
+
+
+
+
 
 
 
